// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Declaration Component Matches the default snapshot 1`] = `
<div>
  <div
    className="declareTitle"
  >
    CONSENT
  </div>
  <section
    className="declareSection"
  >
    <label
      htmlFor="checkbox1"
    >
      <input
        id="checkbox1"
        onClick={[Function]}
        type="checkbox"
      />
      <span
        className="declaration-cb"
      >
        I hereby consent to a check of criminal charges and convictions to determine whether I have a conviction or outstanding charge for any relevant or specified offence(s) under the
         
        <i>
          Criminal Records Review Act
        </i>
        . I hereby consent to a check of all available law enforcement systems, including any local police records.
      </span>
      <span
        className="mandatory"
        id="asterisk"
      >
        *
      </span>
    </label>
  </section>
  <section
    className="declareSection"
  >
    <label
      htmlFor="checkbox2"
    >
      <input
        id="checkbox2"
        onClick={[Function]}
        type="checkbox"
      />
      <span
        className="declaration-cb"
      >
        I hereby consent to a Vulnerable Sector search to check if I have been convicted of and received a record suspension (formerly known as a pardon) for any sexual offences as per the
         
        <i>
          Criminal Records Review Act
        </i>
        . For more information on Vulnerable Sector searches, please visit the
         
        <a
          href="http://www.rcmp-grc.gc.ca/en/types-criminal-background-checks"
          rel="noopener noreferrer"
          target="_blank"
        >
          RCMP website.
        </a>
         
        I understand that as part of the Vulnerable Sector search, I may be required to submit fingerprints to confirm my identity. In addition, where the results of a check indicate that a criminal record or outstanding charge for a relevant or specified offence(s) may exist, I agree to provide my fingerprints to verify any such criminal record.
      </span>
      <span
        className="mandatory"
        id="asterisk"
      >
        *
      </span>
    </label>
  </section>
  <section
    className="declareSection"
  >
    <label
      htmlFor="checkbox3"
    >
      <input
        id="checkbox3"
        onClick={[Function]}
        type="checkbox"
      />
      <span
        className="declaration-cb"
      >
        I hereby consent to the disclosure by BC Corrections to the Deputy Registrar of my identifying information (i.e. name), charges, convictions and outstanding warrants; information relevant to contact with police, BC Corrections, and the judicial system; and my date of birth. I hereby consent to the disclosure by the Deputy Registrar to the Criminal Records Review Unit of my name, date of birth, gender, and relevant involvement with BC Corrections. I consent to the disclosure to the Deputy Registrar by the Criminal Records Review Unit of any personal information relating to any outstanding charges or convictions for any relevant or specified offence(s) as defined under the 
        <i>
          Criminal Records Review Act
        </i>
         
        or any police investigations, charges, or convictions deemed relevant by the Deputy Registrar. I further authorize the release to the Deputy Registrar of any documents in the custody of the police, the courts, corrections and crown counsel relating to any such outstanding charges or convictions for any relevant or specified offence(s) as defined under the
         
        <i>
          Criminal Records Review Act
        </i>
         or any such police investigations, charges, or convictions deemed relevant by the Deputy Registrar.
      </span>
      <span
        className="mandatory"
        id="asterisk"
      >
        *
      </span>
    </label>
  </section>
  <section
    className="declareSection"
  >
    <label
      htmlFor="checkbox4"
    >
      <input
        id="checkbox4"
        onClick={[Function]}
        type="checkbox"
      />
      <span
        className="declaration-cb"
      >
        If I am charged with or convicted of any relevant or specified offence(s) at any time subsequent to the criminal record check authorization herein, I further agree to report the charge(s) or conviction(s) to my organization.
      </span>
      <span
        className="mandatory"
        id="asterisk"
      >
        *
      </span>
    </label>
  </section>
</div>
`;

exports[`Declaration Component Matches the sharing snapshot 1`] = `
<div>
  <div
    className="declareTitle"
  >
    CONSENT
  </div>
  <section
    className="declareSection"
  >
    <label
      htmlFor="checkbox1"
    >
      <input
        id="checkbox1"
        onClick={[Function]}
        type="checkbox"
      />
      <span
        className="declaration-cb"
      >
        I understand that to share the result of a criminal record check, I must have completed a criminal record check within the last 5 years through the Criminal Records Review Programs (CRRP) and the sharing request must be for the same type of check as previously completed, either for children, vulnerable adults, or both children and vulnerable adults.
      </span>
      <span
        className="mandatory"
        id="asterisk"
      >
        *
      </span>
    </label>
  </section>
  <section
    className="declareSection"
  >
    <label
      htmlFor="checkbox2"
    >
      <input
        id="checkbox2"
        onClick={[Function]}
        type="checkbox"
      />
      <span
        className="declaration-cb"
      >
        I confirm I have completed a criminal record check within the past five years with the CRRP which did not result in a determination of risk to children and/or vulnerable adults as defined in the 
        <i>
          Criminal Records Review Act
        </i>
        . I understand no details will be disclosed to the organization I am applying to, only the result. I hereby consent to share the result of the completed check with the organization I am applying to.
      </span>
      <span
        className="mandatory"
        id="asterisk"
      >
        *
      </span>
    </label>
  </section>
  <section
    className="declareSection"
  >
    <label
      htmlFor="checkbox3"
    >
      <input
        id="checkbox3"
        onClick={[Function]}
        type="checkbox"
      />
      <span
        className="declaration-cb"
      >
        I understand that if the Registrar determines I do not have a criminal record check to share according to the above criteria, I will be promptly notified.
      </span>
      <span
        className="mandatory"
        id="asterisk"
      >
        *
      </span>
    </label>
  </section>
  <section
    className="declareSection"
  >
    <label
      htmlFor="checkbox4"
    >
      <input
        id="checkbox4"
        onClick={[Function]}
        type="checkbox"
      />
      <span
        className="declaration-cb"
      >
        I understand that within 5 years of the date of my completing this Consent to Share a Criminal Record Check form, should the CRRP make a determination that I pose a risk to children and/or vulnerable adults, the Deputy Registrar will promptly provide notification to me and to the persons and entities (organizations) identified on this Consent to Share a Criminal Record Check.
      </span>
      <span
        className="mandatory"
        id="asterisk"
      >
        *
      </span>
    </label>
  </section>
</div>
`;
